Добавил описания исполнения кода

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1328,6 +1328,9 @@ end
         \texttt{eval}. Анонимная функция для каждой команду будет соответственно
         вызывать методы \texttt{send\_out}, \texttt{state\_up} и
         \texttt{state\_down} у объекта класса \texttt{D2NA::Code}.
+  \item Загруженное правило помещает в индекс \texttt{conditions\_cache} исходя
+        из своего условия и в кеш \texttt{required} с размером своего списка
+        условий.
 \end{enumerate}
 
 \subsubsection{Загрузка кода через программу}
@@ -1351,6 +1354,40 @@ end
         входа (\texttt{STDIN}).
   \item По закрытию входящего потока (получению с него кода \texttt{ETX} об
         окончании текста) — закрывает программу.
+\end{enumerate}
+
+\newpage
+\subsubsection{Исполнение кода}
+
+После загрузки кода, объект \texttt{D2NA::Code} посылает сам в себя входящий
+сигнал \texttt{:Init} и ждёт поступления новых входящих сигналов.
+
+При поступлении входящего сигнала:
+\begin{enumerate}
+  \item Код через индекс смотрит все правила с входящим сигналом в условии и
+        выполняет те из них, у которых кеш невыполненных условий
+        (\texttt{required}) равен единицы.
+  \item Выполненные правила вызывают у кода методы \texttt{send\_out},
+        \texttt{state\_up} и \texttt{state\_down} для исходящего сигнала,
+        повышения и понижения переменных, соответственно:
+        \begin{itemize}
+          \item При исходящем сигнале код уведомляет о нём всех подписанных
+                на соответствующий сигнал через метод \texttt{listen}.
+          \item При увеличении переменной, код увеличивает её значение в хеше
+                \texttt{states} и добавляет её во временный хеш \texttt{@diff}.
+          \item При увеличении переменной, код уменьшает её значение в хеше
+                \texttt{states} и добавляет её во временный хеш \texttt{@diff}.
+        \end{itemize}
+  \item После вызова всех правил, код с помощью временного хеша \texttt{@diff}
+        смотрит, какие переменные изменились. Для всех изменённых переменных
+        код смотрит правила, содержащие изменённую переменную в условии, и
+        уменьшает или увеличивает им кеш невыполненных условий
+        (\texttt{required}).
+  \item Далее код вызывает все правила, у которых кеш невыполненных условий
+        стал равен нулю.
+  \item Если \texttt{@diff} показывает, что есть вновь изменённые переменные и
+        максимальное количество циклов (\texttt{max\_depth}) не превышено, то
+        код возвращается к шагу \textit{в}.
 \end{enumerate}
 
 \newpage
