Добавил закрытые методы в описание класса Code

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -494,8 +494,7 @@ $D^2NA$-код должен быть запущен из приложения н
   \item \texttt{delete\_listeners!} — удаляет все коды, добавленные через метод
         \texttt{listen}.
   \item \texttt{reset!} — обнуляет все переменные загруженного кода
-        (переводит его в начальное состояние) и удаляет все коды, добавленные
-        через метод \texttt{listen}.
+        (переводит его в начальное состояние).
 \end{itemize}
 
 При получении первого входящего сигнала библиотека сама отправит загруженному
@@ -1212,6 +1211,25 @@ end
           \item \texttt{on(*conditions, \&block)} — добавляет новое правило
                 с условиями из массива \texttt{conditions} и командами из блока
                 кода \texttt{block}.
+          \item \texttt{listen(signals, \&block)} — добавляет код
+                \texttt{block}, как подписчика на сигналы из массива
+                \texttt{signals}. Если \texttt{signals} пуст, то \texttt{block}
+                будет вызван при любом исходящем сигнале.
+          \item \texttt{delete\_listeners!} — удаляет всех подписчиков на
+                исходяящие сигналы, добавленных через метод \texttt{listen}.
+          \item \texttt{<<(signal)} — посылает входящий сигнал с именем
+                из параметра \texttt{signal} в код.
+          \item \texttt{sind\_out(signal)} — посылает исходящий сигнал с именем
+                из параметра \texttt{signal} и оповещает о нём всех подписчиков.
+          \item \texttt{state\_up(state)} — увеличивает значение переменной с
+                именем из параметра \texttt{state} на единицу.
+                именем из параметра \texttt{state} на единицу.
+          \item \texttt{start} — посылает входящий сигнал \texttt{:Init} в
+                загруженный код.
+          \item \texttt{started?} — возвращает истинное значение, если сигнал
+                \texttt{:Init} уже был послан в загруженный код.
+          \item \texttt{reset!} — возвращает код в исходное состояние, обнуляя
+                все переменные.
           \item \texttt{conditions\_cache} — индекс для повышения
                 быстродействия. Это хеш в ключах хранит имя переменной или
                 входящего сигнала, а в значения — список правил, у которых эта
