Добил описание классов генератора

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -626,8 +626,8 @@ end
         Вызванный без параметров возвращает текущее значение.
   \item \texttt{worker\_count(count)} — задаёт \texttt{size}, как количество
         потоков, которые будут генерировать новую программу. Чтобы полностью
-        использовать потенциал современных процессоров мутация и тестирование
-        кода идёт в многопоточном режиме.
+        использовать потенциал современных многоядерных процессоров при
+        мутация и тестировании кода в многопоточном режиме.
         Вызванный без параметров возвращает текущее значение.
   \item \texttt{selection(description, options, \&block)} — добавляет
         \texttt{block} как оценочную функцию, которой конечный $D^2NA$-код
@@ -662,7 +662,7 @@ end
 \begin{itemize}
   \item \texttt{step!} — делает следующую итерацию написания программы.
   \item \texttt{next\_step?} — возвращает истинное значение, если функция
-        останова показала, что цель генерации ещё достигнута и требуются ещё
+        останова показала, что цель генерации ещё не достигнута и требуются ещё
         итерации.
   \item \texttt{step} — возвращает количество уже выполненных итераций.
   \item \texttt{stagnation} — возвращает количество последних шагов, за которые
@@ -1407,6 +1407,228 @@ end
         максимальное количество циклов (\texttt{max\_depth}) не превышено, то
         код возвращается к шагу \textit{в}.
 \end{enumerate}
+
+\subsection{Генератор}
+
+Генератор программ на $D^2NA$ состоит из классов:
+\begin{itemize}
+  \item \texttt{D2NA::TestResult} — класс для хранения результатов оценочной
+        функции. Содержит методы:
+        \begin{itemize}
+          \item \texttt{match(test, priority)} — добавляет проверку с
+                приоритетом в \texttt{priority}, что в параметре \texttt{test} —
+                истинное значение.
+          \item \texttt{max(value, priority)} — добавляет требование с
+                приоритетом в \texttt{priority}, чтобы в параметре
+                \texttt{value} значение было максимально.
+          \item \texttt{min(value, priority)} — добавляет требование с
+                приоритетом в \texttt{priority}, чтобы в параметре
+                \texttt{value} значение было минимально.
+          \item \texttt{success?} — возвращает истинное значение, если все
+                проверки, добавленные через \texttt{match} — успешны.
+          \item \texttt{<=>(another)} — сравнивает себя с другим результатом
+                оценочной функции. Возвращает $-1$, $0$ или $1$, если хуже,
+                равен или лучше, соответственно.
+        \end{itemize}
+  \item \texttt{D2NA::Tests} — класс для хранения оценочных функции. Методы:
+        \begin{itemize}
+          \item \texttt{tests} — массив с кодом оценочных функций.
+          \item \texttt{add(description, priority, \&block)} — добавляет код
+                новой оценочной функции из \texttt{block} с описанием из
+                \texttt{description} и приоритетом из \texttt{priority}.
+          \item \texttt{run(code)} — тестирует объект класса\\
+                \texttt{D2NA::Code} из параметра \texttt{code} и возвращает
+                результат оценочной функции в объекте класса\\
+                \texttt{D2NA::TestResult}.
+          \item \texttt{output\_signals} — хеш с именем исходящего сигнала в
+                ключах и посланном количестве в значениях.
+          \item \texttt{out} — объект класса \texttt{D2NA::Recorder},
+                записывающий исходящие сигналы тестируемого кода.
+          \item \texttt{clear\_out!} — очищает записанные исходящие сигналы в
+                \texttt{out} и \texttt{output\_signals}.
+          \item \texttt{out\_should\_be\_empty} — проверяет, что \texttt{out}
+                пуст. Создаёт 2 требования в объекте\\
+                \texttt{D2NA::TestResult}:\\ \texttt{match(out.length == 1)} и
+                \texttt{min(out.length)}.
+          \item \texttt{out\_should\_has} —  проверяет, что в \texttt{out}
+                содержал сигналы из ключей хеша \texttt{signals} в указаном в
+                значениях хеша количестве. Для каждого элемента хеша
+                \texttt{signals} создаёт 2 требования:
+                \texttt{match(output\_signals[signal] ==\\ value)} и
+                \texttt{min((output\_signals[signal] - value).abs)}. Хеш
+                \texttt{signals} так же может содержать ключ \texttt{priority} с
+                приоритетом теста.
+          \item \texttt{out\_should(signals)} — проверяет, что в \texttt{out}
+                содержал только сигналы из ключей хеша \texttt{signals} в
+                указаном в значениях хеша количестве. Для каждого элемента
+                хеша \texttt{signals} создаёт 2 требования:
+                \texttt{match(output\_signals[signal] ==\\ value)} и
+                \texttt{min((output\_signals[signal] - value).abs)}. Кроме того,
+                подсчитывает неуказанные в ключах \texttt{signals} посланные
+                сигналы и для них создаёт 2 требования: \texttt{match(0 == bad)}
+                и \texttt{min(bad)}. Хеш \texttt{signals} так же может содержать
+                ключ \texttt{priority} с приоритетом теста.
+          \item \texttt{out\_should\_hasnt(signals, options)} —\\ проверяет,
+                чтобы среди посланных сигналов не было исходящих сигналов из
+                массива \texttt{signals}. Для каждого сигнала массива
+                \texttt{signals} создаёт два требования:
+                \texttt{min(output\_signals[i])} и\\
+                \texttt{match(output\_signals[i] == 0)}. В \texttt{options}
+                может содержаться хеш с ключом \texttt{priority} с приоритетом
+                теста.
+          \item \texttt{send(*signals)} — посылает в тестируемый код входящие
+                сигналы из массива \texttt{signals}.
+          \item \texttt{should(value, options)} — создаёт требование\\
+                \texttt{match(value)}. В \texttt{options} может содержаться хеш
+                с ключом \texttt{priority} с приоритетом теста.
+          \item \texttt{max(value, options)} — создаёт требование\\
+                \texttt{max(value)}. В \texttt{options} может содержаться хеш
+                с ключом \texttt{priority} с приоритетом теста.
+          \item \texttt{min(value, options)} — создаёт требование\\
+                \texttt{min(value)}. В \texttt{options} может содержаться хеш
+                с ключом \texttt{priority} с приоритетом теста.
+        \end{itemize}
+  \item \texttt{D2NA::Population} — класс для хранения программ по слоям на
+        основе результата оценочной функции. Имеет методы:
+        \begin{itemize}
+          \item \texttt{push(code, result)} — помещает в популяцию код из
+                \texttt{code} с объектом класса \texttt{D2NA::Code} и
+                соответствующий ему результат оценочной функции из
+                \texttt{result} с объектом класса \texttt{D2NA::TestResult}.
+          \item \texttt{pop} — возвращает следующий код и удаляет его из
+                популяции.
+          \item \texttt{best\_result} — возвращает лучший результат оценочной
+                функции.
+          \item \texttt{best} — возвращает код с наименьшей длинной и получивший
+                лучший результат оценочной функции.
+          \item \texttt{trim(first, decrease)} — сокращает первый слой для
+                размера из параметра \texttt{first}, а последующий слои
+                сокращаются до размера\\ $L_i = L_{i-1} / \texttt{decrease}$.
+        \end{itemize}
+ \item \texttt{D2NA::MutableCode} — расширяет класс \texttt{D2NA::Code},
+       добавляя в него методы для изменения, клонирования, печати и мутации:
+       \begin{itemize}
+         \item \texttt{to\_tuby} — возвращает строку с исходным кодом программы.
+         \item \texttt{clone} — возвращает копию объекта и всех его кешей.
+               Правила из его свойства \texttt{rules} не копируются, так как они
+               будут копироваться, только если одна из копий кода изменит
+               правило.
+         \item \texttt{modify(\&block)} — выполняет блок кода из \texttt{block}
+               на объекте (с помощью \texttt{instance\_eval}), после чего
+               перекомпилирует все изменённые правила.
+         \item \texttt{conditions\_count} — количество всех возможных условий
+               с текущими входящими сигналами и переменными.
+         \item \texttt{unused\_conditions} — неиспользованные условия из
+               всех возможных условий с текущими входящими сигналами и
+               переменными. То есть условия, с которыми ещё нет правил.
+         \item \texttt{delete\_rule(rule)} — удаляет правило \texttt{rule} из
+               кода и всех его кешей.
+         \item \texttt{remove\_state(state)} — удаляет переменную с именем
+               \texttt{state}, все правила имеющие эту переменную в условии и
+               все команды, работающие с этой переменной.
+         \item \texttt{add\_command(rule\_number, command, param)} — добавляет
+               команду \texttt{comamnd}, влияющую на переменную или сигнал
+               \texttt{param}, в правило с порядковым номером из
+               \texttt{rule\_number}. При изменении правила, сначала копирует
+               его и меняет уже его копию.
+         \item \texttt{remove\_command(position, rule\_number)} — удаляет
+               правило с порядковым номером \texttt{position}. При изменении
+               правила, сначала копирует его и меняет уже его копию. Если
+               \texttt{rule\_number} указан, то порядковый номер отсчитывается
+               в указанном правиле, иначе — во всей программе с начала.
+         \item \texttt{mutation\_params} — параметры случайных изменений по
+               умолчанию.
+         \item \texttt{mutate!(params)} — вносит в код случайные изменения
+               исходя из параметров объединив \texttt{params} или
+               \texttt{mutation\_params}.
+       \end{itemize}
+  \item \texttt{D2NA::Worker} — класс для многопоточной обработки. Методы:
+      \begin{itemize}
+        \item \texttt{evolution} — генератор, который создал этот объект.
+        \item \texttt{thread} — отдельный процесс, в котором работает это
+              объект.
+        \item \texttt{tests} — копия оценочной функции, чтобы при её вызове
+              не создавать конфликтов с другими работающими объектам класса
+              \texttt{D2NA::Worker}.
+        \item \texttt{work} — сделать очередную итерацию работы со следующим
+              кодом из прошлой популяции.
+        \item \texttt{run} — запустить работу объекта в отдельном процессе.
+      \end{itemize}
+  \item \texttt{D2NA::Evolution} — класс для настройки и управления генерацией
+        кода с помощью генетических алгоритмов. Содержит методы:
+        \begin{itemize}
+          \item \texttt{protocode(code, \&block)} — задаёт объект\\ класса
+                \texttt{D2NA::Code} из параметра \texttt{code} как первое
+                поколение программы для начала итераций. Если \texttt{code} не
+                задан, но передан блок кода, то метод сам создаст пустой
+                экземпляр \texttt{D2NA::Code} и вызовет на нём \texttt{block} с
+                исходных $D^2NA$-кодом. Вызванный без параметров возвращает
+                текущее значение.
+          \item \texttt{min\_population(count)} — задаёт \texttt{size}, как
+                минимальное количество программ-кандидатов после каждой
+                итерации. Вызванный без параметров возвращает текущее значение.
+                По умолчанию — 10.
+          \item \texttt{stagnation\_grow(count)} — задёт \texttt{count}, как
+                увеличение популяции на каждом шаге, когда оценочная функциия
+                не была улучшена. Вызванный без параметров возвращает текущее
+                значение. По умолчанию — 2.
+          \item \texttt{layer\_decrease(count)} — задаёт \texttt{count}, как
+                коэффициент уменьшение размера каждого слоя популяции.
+                Вызванный без параметров возвращает текущее значение.
+                По умолчанию — 2.
+          \item \texttt{worker\_count(count)} — задаёт \texttt{size}, как
+                количество объект класса \texttt{D2NA::Worker}, которые будут
+                загружены для генерации кода и будут работать в независимых
+                потоках. Вызванный без параметров возвращает текущее значение.
+                По умолчанию — 1.
+          \newpage
+          \item \texttt{selection(description, options, \&block)} — добавляет в
+                объект класса \texttt{D2NA::Tests} оценочную функцию, которой
+                конечный $D^2NA$-код должен соответствовать. Аргумент
+                \texttt{description} может содержать описание оценочной
+                функции, а \texttt{options} — хеш с параметром
+                \texttt{priority}, в котором содержится цифровой приоритет этой
+                оценочной над другими.
+          \item \texttt{tests} — возвращает массив оценочных функций, объектов
+                класса \texttt{D2NA::Tests}.
+          \item \texttt{end\_if(\&block)} — задаёт \texttt{block}, как функцию
+                остановка. Переданный код будет вызываться в конце каждой
+                итерации, и, если он вернёт истинное значение, процесс генерации
+                будет остановлен, так как цель разработчика достигнута.
+                По умолчанию — \texttt{success}, то есть проверяет, чтобы
+                требования оценочной функции были выполнены.
+          \item \texttt{stagnation\_limit(maximum)} — задаёт\\ \texttt{maximum},
+                как максимальное количество шагов простоя. Если значение
+                оценочной функции не было улучшено за максимальное количество
+                шагов простоя, то генерация останавливается, поскольку генератор
+                не способен создать требуемый код. Вызванный без параметров
+                возвращает текущее значение. По умолчанию — 1 000.
+          \item \texttt{last\_best\_result} — лучший результат оценочной функции
+                с прошлой итерации.
+          \item \texttt{stagnation} — возвращает количество последних шагов, за
+                которые не удалось улучшить результат оценочной функции.
+          \item \texttt{success} — возвращает истинное значение, если все
+                требований оценочной функции выполнены.
+          \item \texttt{step!} — делает следующую итерацию написания программы.
+          \item \texttt{step} — возвращает количество уже выполненных итераций.
+          \item \texttt{end?} — возвращает значение функция останова.
+          \item \texttt{no\_result?} — возвращает истинное значение, если
+                цель генерации нельзя достигнуть, то есть максимальное
+                количество без улучшения оценочной функции превышено.
+          \item \texttt{next\_step?} — возвращает истинное значение, если
+                функция останова показала, что цель генерации ещё не достигнута
+                и требуются ещё итерации. Генерирует исключение, если количество
+                шаг без улучшение результата оценочной функции
+                (\texttt{stagnation}) превысил предел\\
+                \texttt{stagnation\_limit}.
+          \item \texttt{population} — возвращает популяцию программ,
+                сгенерированных на текущем шаге.
+          \item \texttt{old\_population} — возвращает популяцию программ,
+                полученных на предыдущем шаге.
+          \item \texttt{workers} — массив созданных объектов класса
+                \texttt{D2NA::Worker} для работы в многопоточном режиме.
+        \end{itemize}
+\end{itemize}
 
 \newpage
 \begin{thebibliography}{}
