Добавил описания процесса генерации

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1561,9 +1561,9 @@ end
                 \texttt{D2NA::Code} из параметра \texttt{code} как первое
                 поколение программы для начала итераций. Если \texttt{code} не
                 задан, но передан блок кода, то метод сам создаст пустой
-                экземпляр \texttt{D2NA::Code} и вызовет на нём \texttt{block} с
-                исходных $D^2NA$-кодом. Вызванный без параметров возвращает
-                текущее значение.
+                экземпляр \texttt{D2NA::MutableCode} и вызовет на нём
+                \texttt{block} с исходных $D^2NA$-кодом. Вызванный без
+                параметров возвращает текущее значение.
           \item \texttt{min\_population(count)} — задаёт \texttt{size}, как
                 минимальное количество программ-кандидатов после каждой
                 итерации. Вызванный без параметров возвращает текущее значение.
@@ -1629,6 +1629,85 @@ end
                 \texttt{D2NA::Worker} для работы в многопоточном режиме.
         \end{itemize}
 \end{itemize}
+
+\newpage
+\subsubsection{Генерация кода}
+
+Процесс генерации программы на $D^2NA$-коде по оценочной функции:
+
+\begin{enumerate}
+  \item В пакете \texttt{d2na/evolution} есть файл \texttt{d2na-evolution.rb},
+        который загружает все класс генератора и виртуальной машины:
+        \begin{verbatim}
+        require 'd2na-evolution'
+        \end{verbatim}
+  \item После загрузки нужных классов, разработчик создаёт экземпляр класса
+        \texttt{D2NA::Evolution} и устанавливает в ней нужные ему настройки,
+        имена входящий и исходящих сигналов и оценочные функции:
+        \begin{verbatim}
+        e = D2NA::Evolution.new do
+          protocode do
+            input … # Имена входящих сигналов
+            ouput … # Имена входящих сигналов
+          end
+          # Настройки
+          selection do
+            # Оценочная функция
+          end
+        end
+        \end{verbatim}
+   \newpage
+   \item Далее разработчик пишет цикл, совершающий итерацию генерации кода,
+         пока цель генерации не будет достигнута или застой (количество
+         итераций без улучшения оценочной функции) не превысит максимальное
+         значение:
+         \begin{verbatim}
+         while e.next_step?
+           e.step!
+         end
+         \end{verbatim}
+  \item Вначале генератор создаёт первое поколение в свойстве\\
+        \texttt{population} размером указанным в \texttt{min\_population},
+        содержащее точные копии кода переданного в \texttt{protocode}.
+  \item До начала итерация генератор создаёт указанное в\\
+        \texttt{worker\_count} количество процессов обработки их объектов класса
+        \texttt{D2NA::Worker}.
+  \item В начале каждой итерации генератор копирует текущую популяцию из
+        \texttt{population} в \texttt{old\_population}. В \texttt{population}
+        создаётся пустая популяция.
+  \item Далее каждый обработчик (объект класса \texttt{D2NA::Worker}) в
+        отдельном процессе начинает итерацию:
+        \begin{enumerate}
+          \item Достаёт следующий код и удаляет его из прошлой популяции\\
+                \texttt{old\_population}.
+          \item Делает 2 копии кода с помощью метода \texttt{clone} класса
+                \texttt{D2NA::MutableCode}.
+          \item На каждой копии вызывает случайные изменения с помощью метода
+                \texttt{mutate!}.
+          \item Каждую копию тестирует заданными разработчиком оценочными
+                функциями из свойства \texttt{tests} класса
+                \texttt{D2NA::Evolution}.
+          \item Каждую копию кода, вместе с полученными результатами оценочной
+                функции помещает в новую популяцию \texttt{population}.
+          \item Объект класса \texttt{Population} приняв новый код и его
+                результат оценочной функции, с помощью бинарного поиска находит
+                подходящий слой и сохраняет код там.
+        \end{enumerate}
+  \item После окончания итерации генератор с помощью\\
+        \texttt{last\_best\_result} и \texttt{population.best\_result} смотрит,
+        улучшился ли результат оценочной функции, и, если она стал больше,
+        обнуляет \texttt{stagnation}, иначе увеличивает на 1.
+  \item Далее генератор вычисляет новый размер первого слоя\\
+        (\texttt{min\_population + stagnation\_grow * stagnation}) и удаляет из
+        популяции программы максимально несоответствующие оценочной функции с
+        помощью \texttt{population.trim}.
+  \item После чего управление возвращает в цикл генерации и если
+        \texttt{stagnation} превысил \texttt{stagnation\_limit}, то генерируется
+        исключение \texttt{D2NA::Timeout}, что код нельзя сгенерировать.
+        Иначе, с помощью \texttt{end?} проверяется достигнута ли цель генерации,
+        указанная в \texttt{end\_if}. Если цель достигнута, то цикл прерывается,
+        иначе, возвращается на шаг \textit{е}.
+\end{enumerate}
 
 \newpage
 \begin{thebibliography}{}
