Внёс утверждающего и специальности в титульный лист

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -8,6 +8,7 @@
 \usepackage{tikz}
 
 \renewcommand{\ESKDtitleFontI}{\ESKDfontIIsize}
+\renewcommand{\ESKDtitleFontIII}{\fontsize{8pt}{8pt}}
 \renewcommand{\ESKDtitleFontIV}{\fontsize{14pt}{14pt}}
 \renewcommand{\ESKDtitleFontVIII}{\fontsize{12pt}{12pt}}
 \renewcommand{\ESKDtitleFontX}{\ESKDfontII\upshape}
@@ -19,13 +20,19 @@
 \ESKDdepartment{Санкт-Петербургский Государственный Политехнический
                 Университет}
 \ESKDcompany{Факультет Технической Кибернетики}
-
+\renewcommand{\ESKDapprovingName}{Работа допущена к защите}
+\ESKDtitleApprovedBy{Зав. кафедрой}{И. Г. Черноруцкий}
 \ESKDtitle{Дипломная работа}
 \ESKDdocName{Тема «Использование генетических алгоритмов
 для автоматизированного написания программ»}
 
 \renewcommand{\ESKDtheTitleFieldVIII}{
 \begin{flushleft}
+Направление: 230100 — Информатика и вычислительная техника.\\
+Специальность: 230105 — Программное обеспечение вычислительной техники
+и автоматизированных систем.
+
+\vspace{10mm}
 Исполнитель: \hfill Ситник Андрей Андреевич \\
 Научный руководитель: \hfill  Амосов Владимир Владимирович \\
 Рецензент: \hfill \\
