Включил двустороннюю печать

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1,4 +1,4 @@
-\documentclass[utf8,a5paper,portrait,10pt]{eskdtext}
+\documentclass[utf8,a5paper,portrait,10pt,twoside]{eskdtext}
 \usepackage{eskdplain}
 
 \usepackage[T2A]{fontenc}
