Добавил Дилемму заключённого

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -33,9 +33,15 @@
 и автоматизированных систем.
 
 \vspace{10mm}
-Исполнитель: \hfill Ситник Андрей Андреевич \\
-Научный руководитель: \hfill  Амосов Владимир Владимирович \\
-Рецензент: \hfill \\
+\parbox[t]{.4\hsize}{
+Исполнитель:\\
+Научный руководитель:\\
+Рецензент:
+}
+\parbox[t]{.5\hsize}{
+Ситник Андрей Андреевич
+Амосов Владимир Владимирович
+}
 \end{flushleft}}
 
 \renewcommand{\ESKDtheTitleFieldX}{Санкт-Петербург 2001}
@@ -1720,6 +1726,51 @@ end
         указанная в \texttt{end\_if}. Если цель достигнута, то цикл прерывается,
         иначе, возвращается на шаг \textit{е}.
 \end{enumerate}
+
+\newpage
+\section{Тестирование}
+
+Для тестирования генератора $D^2NA$ была выбрана дилемма заключённого. Программе
+будет представлен противник и она, с помощью генетического алгоритма должна
+сгенерировать оптимальную тактику противпредставленного соперника.
+
+\subsection{Дилемма заключённого}
+
+Дилемма заключённого — игра из теории игр, в которой игроки стремятся получить
+выгоду, сотрудничая друг с другом или предавая.\cite{dilemma} Классическая
+формулировка дилеммы заключённого такова:
+
+Двое преступников, А и Б, попались примерно в одно и то же время на сходных преступлениях. Есть основания полагать, что они действовали по сговору, и полиция, изолировав их друг от друга, предлагает им одну и ту же сделку: если один свидетельствует против другого, а тот хранит молчание, то первый освобождается за помощь следствию, а второй получает максимальный срок лишения свободы (10 лет). Однако иных доказательств их вины у следствия нет. Если оба молчат, их деяние квалифицируется как неоказание помощи следствию, и они приговариваются к 6 месяцам. Если оба свидетельствуют против друг друга, они получают минимальный срок (по 2 года). Каждый заключённый выбирает, молчать или свидетельствовать против другого. Однако ни один из них не знает точно, что сделает другой. Что произойдёт?
+
+Игру можно представить в виде следующей таблицы:
+
+\begin{tabular}{|lll|}
+                   & Б сотрудничает с А & Б предаёт А \\
+А сотрудничает с Б & А и Б: 0,5 лет  & А: 10 лет, Б: 0 \\ 
+А предаёт Б        & А: 0, Б: 10 лет & А и Б: 2 лет
+\end{tabular}
+
+Если игра повторится только один ход, то выгодно всегда предать соперника,
+поскольку вне зависимости от его действий, наш срок будет меньше. Однако с точки
+зрения группы (обоих заключённых) выгодно сотрудничать — тогда сумма сроков
+будет минимальным.
+
+Однако, если игра будет повторятся несколько раз, и игроки будут помнить
+действия противника в прошлых ходах, то тогда решение становится сложнее.
+
+Впервые поставил и исследовал задачу повторяющейся дилеммы заключённого Роберт
+Аксельрод в 1984. Аксельрод открыл, что если игра повторялась долго среди
+множества игроков, каждый с разными стратегиями, «жадные» стратегии давали
+плохие результаты в долгосрочном периоде, тогда как более «альтруистические» 
+стратегии работали лучше, с точки зрения собственного интереса. Он использовал 
+это, чтобы показать возможный механизм эволюции альтруистического поведения из 
+механизмов, которые изначально чисто эгоистические, через естественный отбор.
+
+Лучшей детерминистской стратегией оказалась «Око за око»\\ (англ. Tit for Tat), 
+которую разработал Анатолий Рапопорт. Она была простейшей из всех участвовавших
+программ, состояла всего из 4 строк кода на языке Бейсик. Стратегия проста:
+сотрудничать на первой итерации игры, после этого игрок делает то же самое, что 
+делал оппонент на предыдущем шаге.
 
 \newpage
 \begin{thebibliography}{}
