Добавил ссылку на генетическое программирование и выводы

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -53,6 +53,10 @@
 \newpage
 \section{Актуальность темы}
 
+Цель работы — создание инструментов для автоматического написания программ с
+помощью генетических алгоритмов. Такой подход называется генетическим
+программированием и сейчас активно развивается.\cite{genetic}
+
 \subsection{Авто-написание программы}
 
 Для того, чтобы программа была автоматически написана, разработчик должен
@@ -2043,7 +2047,24 @@ end
 довольно близок к «Око за око».
 
 \newpage
+\section{Выводы}
+
+В результате данной работы была разработаны и выложены в открытый доступ язык
+$D^2NA$, виртуальная машина для него и автоматический генератор программ по
+оценочной функции.
+
+В процессе тестирования было показано, что генератор с помощью генетических
+алгоритмов успешно создаёт достаточно сложный код, подходящий под заданную
+оценочную функцию. При этом, анализ исходного кода языка $D^2NA$ гораздо
+проще, чем анализ, например, нейронной сети, поскольку $D^2NA$ ближе к
+современным промышленным языкам программирования.
+
+\newpage
 \begin{thebibliography}{}
+
+  \bibitem{genetic}
+    John R. Koza: Genetic Programming: On the Programming of Computers by Means
+    of Natural Selection. — Seventh printing, 2000
 
   \bibitem{communication}
     Mitri, S., Hubert, J. and Waibel, M. Social Behavior: From Cooperation to
