Изменил программу тестирования на более эффективную

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -39,12 +39,12 @@
 Рецензент:
 }
 \parbox[t]{.5\hsize}{
-Ситник Андрей Андреевич
+Ситник Андрей Андреевич\\
 Амосов Владимир Владимирович
 }
 \end{flushleft}}
 
-\renewcommand{\ESKDtheTitleFieldX}{Санкт-Петербург 2001}
+\renewcommand{\ESKDtheTitleFieldX}{Санкт-Петербург 2010}
 
 \maketitle
 
@@ -1782,7 +1782,6 @@ end
 Для тестирования будет использоваться следующая программа:
 
 \begin{verbatim}
-# Подключаем пакет генератора
 require 'd2na-evolution'
 
 # Наказания в зависимости от действий игроков
@@ -1797,16 +1796,13 @@ opponents = [
   # Здесь буду размещаться логика противников
 ]
 
-# Получаем имя входящего сигнала из исходящего
-# Например, :Keep > :Keeped
+# Имя входящего сигнала из исходящего: :Keep > :Keeped
 def input_name(output)
   "#{output}ed".to_sym
 end
 
-# Создаём генератор
 e = D2NA::Evolution.new do
-  # Указываем первую популяцию, объявляя
-  # только входящие и исходящие сигналы
+  # Указываем входящие и исходящие сигналы в первой популяции
   protocode do
     # Входящие сигналы
     input  :Step,    # Программа должна вывести свой ход
@@ -1821,7 +1817,6 @@ e = D2NA::Evolution.new do
   # Генерация будет окончена, если 20 шагов лучшим
   # результатом будет оставаться один и тот же код.
   end_if { stagnation > 20 }
-  
   # Для каждого оппонента …
   opponents.each do |opponent|
     # … создаём оценочную функцию
@@ -1846,8 +1841,12 @@ e = D2NA::Evolution.new do
         send :Step
         
         # За решение программы берём
-        # последний сигнал из полученных
-        our_choice = out.last
+        # первый из полученных сигналов,
+        # после прошлой отправки :Step
+        our_choice = out.first
+        
+        # Очищаем массив полученных сигналов
+        clear_out!
         
         # Если программа не послала исходящий
         # сигнал с решением, то заканчиваем
@@ -1856,6 +1855,7 @@ e = D2NA::Evolution.new do
           our_punishment = 100
           break
         end
+        
         
         
         # Получаем решение противника, передав ему
@@ -1891,10 +1891,8 @@ while evolution.next_step?
   evolution.step!
 end
 
-# Сохраняем лучший результат в файл
-File.open('result.d2na', 'w') do |io|
-  io.puts evolution.population.best.to_ruby
-end
+# Сохраняем лучший результат
+pute evolution.population.best.to_ruby
 \end{verbatim}
 
 \subsection{Тесты}
@@ -1951,12 +1949,6 @@ end
 «Око за око». Генератор не сгенерировал его, потому что у него был только
 добрый противник, которому не нужно мстить.
 
-Вообще, «Око за око» является идеальным решением, если противник нам неизвестен
-и он может быть любым. То есть «Око за око» наберёт меньший суммарный срок при
-игре со всеми возможными противниками. Если целью является победить одного
-конкретного противника, то возможно более эффективны и другие алгоритмы,
-рассчитанные слабые стороны именного этого противника.
-
 Поэтому добавим в тестирование ещё несколько как злых, так и добрых стратегий,
 чтобы разнообразить противников и принудить генератор создать общее решение.
 Всего будем использовать 4 стратегии у оппонентов:
@@ -1965,86 +1957,48 @@ end
   \item Добрая: всегда сотрудничает.
   \item Злая: всегда предаёт.
   \item «Око за око»: предаёт если её предали на прошлом шаге.
-  \item Завистливая: придаёт, если наш срок меньше, чем её.
 \end{enumerate}
 
 \begin{verbatim}
 opponents = [
   proc { :Keep },
   proc { :Betray },
-  proc { |p| :Betrayed == p ? :Betray : :Keep },
-  proc { |p, my, he| he < my ? :Betray : :Keep }
+  proc { |p| :Betrayed == p ? :Betray : :Keep }
 ]
 \end{verbatim}
 
-\newpage
 После нескольких десятка циклов генератор выдал ответ:
 \begin{verbatim}
 input  :Step, :Keeped, :Betrayed
 output :Keep, :Betray
 
-on :Step do
-  send :Keep
-  send :Keep
+on :Init do
   send :Keep
 end
 
-on :Init do
+on :Step do
   send :Betray
-  send :Keep
-  send :Betray
-  up :a
-  down :a
 end
 
 on :Keeped do
-  send :Keep
-  send :Keep
-  send :Betray
-end
-
-on :Betrayed do
-  send :Keep
-  send :Keep
-  send :Betray
-  send :Betray
-  up :a
-end
-
-on :a, :Step do
   send :Betray
 end
 \end{verbatim}
 
 \newpage
-В коде много лишних операций и исходящих сигналов, потому что в оценочной
-функции мы не требовали, чтобы только один сигнал был посланы после
-\texttt{:Step}, а просто брали последний. Уберём лишние команды:
+Алгоритм работы этого кода:
+\begin{itemize}
+  \item При старте программы послать \texttt{:Keep}.
+  \item При получении \texttt{:Step}, послать \texttt{:Betray}.
+  \item При получении \texttt{:Keeped}, послать \texttt{:Keep}.
+\end{itemize}
 
-\begin{verbatim}
-input  :Step, :Keeped, :Betrayed
-output :Keep, :Betray
+То есть алгоритм, на первом шаге сотрудничает со всеми, а на последующих,
+поступает с ними так, как с ним поступили на прошлом шагу.
 
-on :Step do
-  send :Keep
-end
-
-on :Betrayed do
-  up :a
-end
-
-on :a, :Step do
-  send :Betray
-end
-\end{verbatim}
-
-Этот код, при поступлении входящего сигнала \texttt{:Step} посылает исходящий
-сигнал \texttt{:Keep}, что он будет сотрудничать. Однако, если его предали
-на предыдущем ходе (пришёл сигнал \texttt{:Betrayed}) он увеличивает переменную
-\texttt{:a} и уже начинает всегда предавать.
-
-Для представленных противников это является идеальной тактикой и результат
-довольно близок к «Око за око».
+То есть, автоматически сгенерированный алгоритм использует тактику «Око за око»,
+то есть она сам нашёл самую эффективную стратегию в повторяющейся дилемме
+заключённого.
 
 \newpage
 \section{Выводы}
