--- a/Диплом.tex
+++ b/Диплом.tex
@@ -29,8 +29,8 @@
 \renewcommand{\ESKDtheTitleFieldVIII}{
 \begin{flushleft}
 Направление: 230100 — Информатика и вычислительная техника.\\
-Специальность: 230105 — Программное обеспечение вычислительной техники
-и автоматизированных систем.
+Специальность: 230102 — Автоматические системы обработки информации и
+управления.
 
 \vspace{10mm}
 \parbox[t]{.4\hsize}{
