Добавил имя рецензента

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -40,7 +40,8 @@
 }
 \parbox[t]{.5\hsize}{
 Ситник Андрей Андреевич\\
-Амосов Владимир Владимирович
+Амосов Владимир Владимирович\\
+Евдокимов Виктор Евгеньевич
 }
 \end{flushleft}}
 
