Исправил pute на puts

--- a/Диплом.tex
+++ b/Диплом.tex
@@ -1892,7 +1892,7 @@ while evolution.next_step?
 end
 
 # Сохраняем лучший результат
-pute evolution.population.best.to_ruby
+puts evolution.population.best.to_ruby
 \end{verbatim}
 
 \subsection{Тесты}
